--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,5 +14,5 @@ jobs:
             sudo apt-get install -y postgresql-9.6
             sudo service postgresql stop
             sudo chmod o+w /var/run/postgresql
-      - run: go get -v -t -d
-      - run: go test -v
+      - run: go get -v -t -d ./...
+      - run: go test -v ./...
