--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,12 +12,14 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     strategy:
+      fail-fast: false
       matrix:
         os:
         - ubuntu-latest
         - ubuntu-24.04-arm
         - macos-latest
         - windows-latest
+
     steps:
 
     - uses: actions/checkout@v5
