disable tests on Windows and Ubuntu ARM

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,9 +16,13 @@ jobs:
       matrix:
         os:
         - ubuntu-latest
-        - ubuntu-24.04-arm
         - macos-latest
-        - windows-latest
+        # "pg_ctl start" fails on these platforms for unknown reasons.
+        #
+        # See also: https://github.com/koron-go/pgctl/issues/9
+        #
+        #- ubuntu-24.04-arm
+        #- windows-latest
 
     steps:
 
